--- a/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
+++ b/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
@@ -7,6 +7,7 @@
  "field_order": [
   "status",
   "column_break_ydue",
+  "opportunite",
   "section_break_bxto",
   "client",
   "date",
@@ -45,7 +46,8 @@
    "in_standard_filter": 1,
    "label": "Client",
    "options": "Customer",
-   "read_only": 1
+   "read_only": 1,
+   "search_index": 1
   },
   {
    "fieldname": "heure",
@@ -81,11 +83,17 @@
   {
    "fieldname": "column_break_ydue",
    "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "opportunite",
+   "fieldtype": "Link",
+   "label": "Opportunit\u00e9",
+   "options": "Opportunite"
   }
  ],
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2024-08-14 15:06:09.910875",
+ "modified": "2024-08-15 14:55:47.239755",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "Appel Telephonique",
