--- a/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
+++ b/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
@@ -13,8 +13,11 @@
   "client",
   "date",
   "column_break_wgjl",
-  "utilisateur",
   "heure",
+  "section_break_ytwe",
+  "utilisateur",
+  "column_break_gxoa",
+  "nom_utilisateur",
   "section_break_yjpc",
   "notes",
   "notes_tab"
@@ -34,10 +37,11 @@
   },
   {
    "fieldname": "utilisateur",
-   "fieldtype": "Data",
+   "fieldtype": "Link",
    "in_list_view": 1,
    "in_standard_filter": 1,
    "label": "Utilisateur",
+   "options": "User",
    "read_only": 1
   },
   {
@@ -92,6 +96,7 @@
    "fieldtype": "Link",
    "label": "Opportunit\u00e9",
    "options": "Opportunite",
+   "read_only": 1,
    "search_index": 1
   },
   {
@@ -101,11 +106,26 @@
    "in_standard_filter": 1,
    "label": "Type",
    "options": "Prospection\nPrise de contact\nSuivi Visite\nSuivi Commande\nAppel de satisfaction\nR\u00e9activation client\nEnqu\u00eate"
+  },
+  {
+   "fieldname": "section_break_ytwe",
+   "fieldtype": "Section Break"
+  },
+  {
+   "fieldname": "column_break_gxoa",
+   "fieldtype": "Column Break"
+  },
+  {
+   "fetch_from": "utilisateur.full_name",
+   "fieldname": "nom_utilisateur",
+   "fieldtype": "Data",
+   "label": "Nom Utilisateur",
+   "read_only": 1
   }
  ],
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2024-08-25 14:45:00.844084",
+ "modified": "2024-08-25 15:49:51.025002",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "Appel Telephonique",
