--- a/aurescrm/aures_crm/number_card/appels_téléphoniques/appels_téléphoniques.json
+++ b/aurescrm/aures_crm/number_card/appels_téléphoniques/appels_téléphoniques.json
@@ -1,6 +1,6 @@
 {
  "aggregate_function_based_on": "",
- "color": "#c45454",
+ "color": "#ECAD4B",
  "creation": "2024-08-15 17:59:23.502514",
  "docstatus": 0,
  "doctype": "Number Card",
@@ -12,7 +12,7 @@
  "is_public": 1,
  "is_standard": 1,
  "label": "Appels T\u00e9l\u00e9phoniques",
- "modified": "2024-08-15 18:00:29.180157",
+ "modified": "2024-08-28 01:35:25.672278",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "Appels T\u00e9l\u00e9phoniques",
