--- a/aurescrm/aures_crm/dashboard_chart/évolution_appels/évolution_appels.json
+++ b/aurescrm/aures_crm/dashboard_chart/évolution_appels/évolution_appels.json
@@ -2,7 +2,7 @@
  "based_on": "date",
  "chart_name": "\u00c9volution Appels",
  "chart_type": "Count",
- "color": "#4F9DD9",
+ "color": "#ECAD4B",
  "creation": "2024-08-28 01:25:15.880998",
  "docstatus": 0,
  "doctype": "Dashboard Chart",
@@ -13,7 +13,8 @@
  "idx": 0,
  "is_public": 1,
  "is_standard": 1,
- "modified": "2024-08-28 01:25:15.880998",
+ "last_synced_on": "2024-08-28 02:10:46.113038",
+ "modified": "2024-08-28 02:11:04.248922",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "\u00c9volution Appels",
