--- a/aurescrm/aures_crm/workspace/appels/appels.json
+++ b/aurescrm/aures_crm/workspace/appels/appels.json
@@ -39,7 +39,7 @@
  "is_hidden": 0,
  "label": "Appels",
  "links": [],
- "modified": "2024-08-28 01:31:39.650460",
+ "modified": "2024-08-28 01:50:30.623921",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "Appels",
@@ -48,7 +48,11 @@
  "parent_page": "Home",
  "public": 1,
  "quick_lists": [],
- "roles": [],
+ "roles": [
+  {
+   "role": "Commercial"
+  }
+ ],
  "sequence_id": 4.0,
  "shortcuts": [
   {
