--- a/aurescrm/aures_crm/workspace/appels/appels.json
+++ b/aurescrm/aures_crm/workspace/appels/appels.json
@@ -35,17 +35,17 @@
  "hide_custom": 0,
  "icon": "call",
  "idx": 0,
- "indicator_color": "green",
+ "indicator_color": "",
  "is_hidden": 0,
  "label": "Appels",
  "links": [],
- "modified": "2024-08-28 01:50:30.623921",
+ "modified": "2024-08-28 02:24:01.780465",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "Appels",
  "number_cards": [],
  "owner": "Administrator",
- "parent_page": "Home",
+ "parent_page": "",
  "public": 1,
  "quick_lists": [],
  "roles": [
