--- a/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
+++ b/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
@@ -114,7 +114,7 @@
  ],
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2024-08-28 01:27:14.711055",
+ "modified": "2024-09-27 09:47:47.067266",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "Appel Telephonique",
@@ -129,6 +129,18 @@
    "read": 1,
    "report": 1,
    "role": "System Manager",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "delete": 1,
+   "email": 1,
+   "if_owner": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Commercial",
+   "select": 1,
    "share": 1,
    "write": 1
   }
