--- a/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
+++ b/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
@@ -120,7 +120,7 @@
  ],
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2025-02-22 21:36:21.966587",
+ "modified": "2025-03-07 13:45:29.387740",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "Appel Telephonique",
@@ -144,26 +144,23 @@
    "if_owner": 1,
    "read": 1,
    "report": 1,
-   "role": "Commercial",
+   "role": "Commercial Itin\u00e9rant",
    "select": 1,
    "share": 1,
    "write": 1
   },
   {
-   "create": 1,
    "email": 1,
    "export": 1,
    "print": 1,
    "read": 1,
    "report": 1,
    "role": "Superviseur CRM",
-   "share": 1,
-   "write": 1
+   "share": 1
   },
   {
    "create": 1,
    "email": 1,
-   "export": 1,
    "print": 1,
    "read": 1,
    "report": 1,
@@ -179,6 +176,17 @@
    "read": 1,
    "report": 1,
    "role": "Administrateur Ventes",
+   "share": 1,
+   "write": 1
+  },
+  {
+   "create": 1,
+   "email": 1,
+   "if_owner": 1,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Commercial S\u00e9dentaire",
    "share": 1,
    "write": 1
   }
