update(json_files): refresh modified timestamps and add new properties across multiple configurations
- Updated the 'modified' timestamps for various JSON files to reflect recent changes.
- Introduced 'grid_page_length' and 'row_format' properties in several configurations to enhance UI consistency.
- Added 'track_changes' property to enable change tracking in multiple documents, improving data management.
- Ensured uniformity in field properties across different document types for better maintainability.

--- a/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
+++ b/aurescrm/aures_crm/doctype/appel_telephonique/appel_telephonique.json
@@ -118,9 +118,10 @@
    "label": "Date Rappel"
   }
  ],
+ "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "links": [],
- "modified": "2025-03-07 13:45:29.387740",
+ "modified": "2026-01-24 11:42:57.122459",
  "modified_by": "Administrator",
  "module": "Aures CRM",
  "name": "Appel Telephonique",
@@ -191,6 +192,7 @@
    "write": 1
   }
  ],
+ "row_format": "Dynamic",
  "sort_field": "modified",
  "sort_order": "DESC",
  "states": [
@@ -210,5 +212,6 @@
    "color": "Red",
    "title": "Non R\u00e9pondu"
   }
- ]
+ ],
+ "track_changes": 1
 }
